Sat Jan  6 20:43:01 UTC 2024
x/fcitx5-anthy-5.1.3-x86_64-1.txz:  Upgraded.
x/fcitx5-chinese-addons-5.1.3-x86_64-1.txz:  Upgraded.
x/fcitx5-gtk-5.1.1-x86_64-1.txz:  Upgraded.
x/fcitx5-kkc-5.1.1-x86_64-1.txz:  Upgraded.
x/fcitx5-table-extra-5.1.2-x86_64-1.txz:  Upgraded.
x/fcitx5-unikey-5.1.2-x86_64-1.txz:  Upgraded.
x/libime-1.1.4-x86_64-1.txz:  Upgraded.
+--------------------------+
Fri Jan  5 19:33:15 UTC 2024
a/hwdata-0.378-noarch-1.txz:  Upgraded.
a/kernel-firmware-20240105_c82c948-noarch-1.txz:  Upgraded.
a/kernel-generic-6.6.10-x86_64-1.txz:  Upgraded.
a/kernel-huge-6.6.10-x86_64-1.txz:  Upgraded.
a/kernel-modules-6.6.10-x86_64-1.txz:  Upgraded.
ap/vim-9.1.0015-x86_64-1.txz:  Upgraded.
d/kernel-headers-6.6.10-x86-1.txz:  Upgraded.
k/kernel-source-6.6.10-noarch-1.txz:  Upgraded.
  SERIAL_8250_NR_UARTS 4 -> 32
  SERIAL_8250_RUNTIME_UARTS 4 -> 32
  Thanks to Andypoo.
l/fmt-10.2.1-x86_64-1.txz:  Upgraded.
l/gvfs-1.52.2-x86_64-1.txz:  Upgraded.
xap/vim-gvim-9.1.0015-x86_64-1.txz:  Upgraded.
isolinux/initrd.img:  Rebuilt.
kernels/*:  Upgraded.
usb-and-pxe-installers/usbboot.img:  Rebuilt.
+--------------------------+
Thu Jan  4 20:54:16 UTC 2024
a/dcron-4.5-x86_64-14.txz:  Rebuilt.
  Add /etc/default/run-parts. Thanks to lostintime.
kde/fcitx5-configtool-5.1.3-x86_64-1.txz:  Upgraded.
x/fcitx5-5.1.6-x86_64-1.txz:  Upgraded.
x/fcitx5-qt-5.1.4-x86_64-1.txz:  Upgraded.
x/pixman-0.43.0-x86_64-1.txz:  Upgraded.
x/xcb-imdkit-1.0.6-x86_64-1.txz:  Upgraded.
+--------------------------+
Wed Jan  3 20:25:45 UTC 2024
ap/vim-9.1.0-x86_64-1.txz:  Upgraded.
d/clisp-2.50_20230718_669249717-x86_64-1.txz:  Upgraded.
l/poppler-24.01.0-x86_64-1.txz:  Upgraded.
n/c-ares-1.25.0-x86_64-1.txz:  Upgraded.
n/mobile-broadband-provider-info-20231023-x86_64-1.txz:  Upgraded.
n/ncftp-3.2.7-x86_64-1.txz:  Upgraded.
xap/vim-gvim-9.1.0-x86_64-1.txz:  Upgraded.
+--------------------------+
Tue Jan  2 20:26:50 UTC 2024
a/dialog-1.3_20240101-x86_64-1.txz:  Upgraded.