@@ -11,9 +11,25 @@
       <description>Tracking Slackware development in git.</description>
       <language>en-us</language>
       <id xmlns="http://www.w3.org/2005/Atom">urn:uuid:c964f45e-6732-11e8-bbe5-107b4450212f</id>
-      <pubDate>Sat,  6 Jan 2024 20:43:01 GMT</pubDate>
-      <lastBuildDate>Sat,  6 Jan 2024 21:00:04 GMT</lastBuildDate>
+      <pubDate>Sun,  7 Jan 2024 20:24:51 GMT</pubDate>
+      <lastBuildDate>Sun,  7 Jan 2024 20:58:38 GMT</lastBuildDate>
       <generator>maintain_current_git.sh v 1.17</generator>
+      <item>
+         <title>Sun,  7 Jan 2024 20:24:51 GMT</title>
+         <pubDate>Sun,  7 Jan 2024 20:24:51 GMT</pubDate>
+         <link>https://git.slackware.nl/current/tag/?h=20240107202451</link>
+         <guid isPermaLink="false">20240107202451</guid>
+         <description>
+           <![CDATA[<pre>
+a/sysvinit-scripts-15.1-noarch-11.txz:  Rebuilt.
+  rc.S: Don't attempt to edit /etc/motd unless it exists, it is writable, and
+  the first line starts with "Linux <wrong kernel version>."
+  Thanks to lostintime.
+kde/okteta-0.26.15-x86_64-1.txz:  Upgraded.
+l/at-spi2-core-2.50.1-x86_64-1.txz:  Upgraded.
+           </pre>]]>
+         </description>
+      </item>
       <item>
          <title>Sat,  6 Jan 2024 20:43:01 GMT</title>
          <pubDate>Sat,  6 Jan 2024 20:43:01 GMT</pubDate>
