@@ -1,20 +1,20 @@
-Sat Jan  6 20:46:39 UTC 2024
+Sun Jan  7 20:28:07 UTC 2024
 
 Here is the file list for this directory.  If you are using a 
 mirror site and find missing or extra files in the disk 
 subdirectories, please have the archive administrator refresh
 the mirror.
 
-drwxr-xr-x 12 root root      4096 2024-01-06 20:43 .
+drwxr-xr-x 12 root root      4096 2024-01-07 20:24 .
 -rw-r--r--  1 root root      5767 2022-02-02 22:44 ./ANNOUNCE.15.0
 -rw-r--r--  1 root root     16617 2022-02-02 23:27 ./CHANGES_AND_HINTS.TXT
--rw-r--r--  1 root root   1128205 2024-01-05 19:38 ./CHECKSUMS.md5
--rw-r--r--  1 root root       163 2024-01-05 19:38 ./CHECKSUMS.md5.asc
+-rw-r--r--  1 root root   1128205 2024-01-06 20:46 ./CHECKSUMS.md5
+-rw-r--r--  1 root root       163 2024-01-06 20:46 ./CHECKSUMS.md5.asc
 -rw-r--r--  1 root root     17976 1994-06-10 02:28 ./COPYING
 -rw-r--r--  1 root root     35147 2007-06-30 04:21 ./COPYING3
 -rw-r--r--  1 root root     19573 2016-06-23 20:08 ./COPYRIGHT.TXT
 -rw-r--r--  1 root root       616 2006-10-02 04:37 ./CRYPTO_NOTICE.TXT
--rw-r--r--  1 root root    917105 2024-01-06 20:43 ./ChangeLog.txt
+-rw-r--r--  1 root root    917466 2024-01-07 20:24 ./ChangeLog.txt
 drwxr-xr-x  3 root root      4096 2013-03-20 22:17 ./EFI
 drwxr-xr-x  2 root root      4096 2024-01-05 19:31 ./EFI/BOOT
 -rw-r--r--  1 root root   1187840 2021-06-15 19:16 ./EFI/BOOT/bootx64.efi
@@ -25,9 +25,9 @@ drwxr-xr-x  2 root root      4096 2024-01-05 19:31 ./EFI/BOOT
 -rwxr-xr-x  1 root root      2504 2019-07-05 18:54 ./EFI/BOOT/make-grub.sh
 -rw-r--r--  1 root root     10722 2013-09-21 19:02 ./EFI/BOOT/osdetect.cfg
 -rw-r--r--  1 root root      1273 2013-08-12 21:08 ./EFI/BOOT/tools.cfg
--rw-r--r--  1 root root   1472482 2024-01-05 19:37 ./FILELIST.TXT
+-rw-r--r--  1 root root   1472482 2024-01-06 20:46 ./FILELIST.TXT
 -rw-r--r--  1 root root      1572 2012-08-29 18:27 ./GPG-KEY
--rw-r--r--  1 root root    889261 2024-01-06 20:46 ./PACKAGES.TXT
+-rw-r--r--  1 root root    889261 2024-01-07 20:27 ./PACKAGES.TXT
 -rw-r--r--  1 root root      8034 2022-02-02 03:36 ./README.TXT
 -rw-r--r--  1 root root      3629 2024-01-05 19:17 ./README.initrd
 -rw-r--r--  1 root root     34114 2023-12-11 20:35 ./README_CRYPT.TXT
@@ -666,13 +666,13 @@ drwxr-xr-x  2 root root      4096 2022-02-03 07:02 ./patches
 -rw-r--r--  1 root root       575 2022-02-03 07:02 ./patches/FILE_LIST
 -rw-r--r--  1 root root        14 2022-02-03 07:02 ./patches/MANIFEST.bz2
 -rw-r--r--  1 root root       224 2022-02-03 07:02 ./patches/PACKAGES.TXT
-drwxr-xr-x 17 root root      4096 2024-01-06 20:46 ./slackware64
--rw-r--r--  1 root root    346528 2024-01-06 20:46 ./slackware64/CHECKSUMS.md5
--rw-r--r--  1 root root       163 2024-01-06 20:46 ./slackware64/CHECKSUMS.md5.asc
--rw-r--r--  1 root root    429409 2024-01-06 20:45 ./slackware64/FILE_LIST
--rw-r--r--  1 root root   4401499 2024-01-06 20:45 ./slackware64/MANIFEST.bz2
+drwxr-xr-x 17 root root      4096 2024-01-07 20:27 ./slackware64
+-rw-r--r--  1 root root    346528 2024-01-07 20:27 ./slackware64/CHECKSUMS.md5
+-rw-r--r--  1 root root       163 2024-01-07 20:27 ./slackware64/CHECKSUMS.md5.asc
+-rw-r--r--  1 root root    429409 2024-01-07 20:26 ./slackware64/FILE_LIST
+-rw-r--r--  1 root root   4403090 2024-01-07 20:27 ./slackware64/MANIFEST.bz2
 lrwxrwxrwx  1 root root        15 2009-08-23 23:34 ./slackware64/PACKAGES.TXT -> ../PACKAGES.TXT
-drwxr-xr-x  2 root root     32768 2024-01-05 19:36 ./slackware64/a
+drwxr-xr-x  2 root root     32768 2024-01-07 20:26 ./slackware64/a
 -rw-r--r--  1 root root       327 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txt
 -rw-r--r--  1 root root     10720 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txz
 -rw-r--r--  1 root root       163 2022-02-15 18:16 ./slackware64/a/aaa_base-15.1-x86_64-2.txz.asc
@@ -1001,9 +1001,9 @@ drwxr-xr-x  2 root root     32768 2024-01-05 19:36 ./slackware64/a
 -rw-r--r--  1 root root       694 2022-09-06 18:43 ./slackware64/a/sysvinit-functions-8.53-x86_64-6.txt
 -rw-r--r--  1 root root     36308 2022-09-06 18:43 ./slackware64/a/sysvinit-functions-8.53-x86_64-6.txz
 -rw-r--r--  1 root root       163 2022-09-06 18:43 ./slackware64/a/sysvinit-functions-8.53-x86_64-6.txz.asc
--rw-r--r--  1 root root       378 2023-12-29 20:21 ./slackware64/a/sysvinit-scripts-15.1-noarch-10.txt
--rw-r--r--  1 root root     16628 2023-12-29 20:21 ./slackware64/a/sysvinit-scripts-15.1-noarch-10.txz
--rw-r--r--  1 root root       163 2023-12-29 20:21 ./slackware64/a/sysvinit-scripts-15.1-noarch-10.txz.asc
+-rw-r--r--  1 root root       378 2024-01-07 20:11 ./slackware64/a/sysvinit-scripts-15.1-noarch-11.txt
+-rw-r--r--  1 root root     16740 2024-01-07 20:11 ./slackware64/a/sysvinit-scripts-15.1-noarch-11.txz
+-rw-r--r--  1 root root       163 2024-01-07 20:11 ./slackware64/a/sysvinit-scripts-15.1-noarch-11.txz.asc
 -rw-r--r--  1 root root      1587 2024-01-05 19:17 ./slackware64/a/tagfile
 -rw-r--r--  1 root root       395 2023-07-18 18:38 ./slackware64/a/tar-1.35-x86_64-1.txt
 -rw-r--r--  1 root root    774812 2023-07-18 18:38 ./slackware64/a/tar-1.35-x86_64-1.txz
@@ -1590,7 +1590,7 @@ drwxr-xr-x  2 root root      4096 2024-01-05 19:36 ./slackware64/k
 -rw-r--r--  1 root root      1170 2024-01-05 19:17 ./slackware64/k/maketag
 -rw-r--r--  1 root root      1170 2024-01-05 19:17 ./slackware64/k/maketag.ez
 -rw-r--r--  1 root root        18 2024-01-05 19:17 ./slackware64/k/tagfile
-drwxr-xr-x  2 root root     86016 2024-01-04 20:56 ./slackware64/kde
+drwxr-xr-x  2 root root     86016 2024-01-07 20:26 ./slackware64/kde
 -rw-r--r--  1 root root       382 2023-12-07 19:16 ./slackware64/kde/akonadi-23.08.4-x86_64-1.txt
 -rw-r--r--  1 root root   2560412 2023-12-07 19:16 ./slackware64/kde/akonadi-23.08.4-x86_64-1.txz
 -rw-r--r--  1 root root       163 2023-12-07 19:16 ./slackware64/kde/akonadi-23.08.4-x86_64-1.txz.asc
@@ -2573,9 +2573,9 @@ drwxr-xr-x  2 root root     86016 2024-01-04 20:56 ./slackware64/kde
 -rw-r--r--  1 root root       310 2023-12-14 20:43 ./slackware64/kde/networkmanager-qt-5.113.0-x86_64-1.txt
 -rw-r--r--  1 root root    431404 2023-12-14 20:43 ./slackware64/kde/networkmanager-qt-5.113.0-x86_64-1.txz
 -rw-r--r--  1 root root       163 2023-12-14 20:43 ./slackware64/kde/networkmanager-qt-5.113.0-x86_64-1.txz.asc
--rw-r--r--  1 root root       180 2023-12-13 18:25 ./slackware64/kde/okteta-0.26.14-x86_64-1.txt
--rw-r--r--  1 root root   1424544 2023-12-13 18:25 ./slackware64/kde/okteta-0.26.14-x86_64-1.txz
--rw-r--r--  1 root root       163 2023-12-13 18:25 ./slackware64/kde/okteta-0.26.14-x86_64-1.txz.asc
+-rw-r--r--  1 root root       180 2024-01-07 18:40 ./slackware64/kde/okteta-0.26.15-x86_64-1.txt
+-rw-r--r--  1 root root   1431492 2024-01-07 18:40 ./slackware64/kde/okteta-0.26.15-x86_64-1.txz
+-rw-r--r--  1 root root       163 2024-01-07 18:40 ./slackware64/kde/okteta-0.26.15-x86_64-1.txz.asc
 -rw-r--r--  1 root root       358 2023-12-07 20:10 ./slackware64/kde/okular-23.08.4-x86_64-1.txt
 -rw-r--r--  1 root root   7259384 2023-12-07 20:10 ./slackware64/kde/okular-23.08.4-x86_64-1.txz
 -rw-r--r--  1 root root       163 2023-12-07 20:10 ./slackware64/kde/okular-23.08.4-x86_64-1.txz.asc
@@ -2754,7 +2754,7 @@ drwxr-xr-x  2 root root     86016 2024-01-04 20:56 ./slackware64/kde
 -rw-r--r-- 1 root root      517 2023-12-07 21:02 ./slackware64/kde/zanshin-23.08.4-x86_64-1.txt
 -rw-r--r-- 1 root root   683696 2023-12-07 21:02 ./slackware64/kde/zanshin-23.08.4-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2023-12-07 21:02 ./slackware64/kde/zanshin-23.08.4-x86_64-1.txz.asc
-drwxr-xr-x 2 root root    86016 2024-01-05 19:36 ./slackware64/l
+drwxr-xr-x 2 root root    86016 2024-01-07 20:26 ./slackware64/l
 -rw-r--r-- 1 root root      329 2022-03-06 20:00 ./slackware64/l/GConf-3.2.6-x86_64-8.txt
 -rw-r--r-- 1 root root   928144 2022-03-06 20:00 ./slackware64/l/GConf-3.2.6-x86_64-8.txz
 -rw-r--r-- 1 root root      163 2022-03-06 20:00 ./slackware64/l/GConf-3.2.6-x86_64-8.txz.asc
@@ -2836,9 +2836,9 @@ drwxr-xr-x 2 root root    86016 2024-01-05 19:36 ./slackware64/l
 -rw-r--r-- 1 root root      175 2021-10-11 18:54 ./slackware64/l/aspell-en-2020.12.07_0-x86_64-1.txt
 -rw-r--r-- 1 root root  1134940 2021-10-11 18:54 ./slackware64/l/aspell-en-2020.12.07_0-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2021-10-11 18:54 ./slackware64/l/aspell-en-2020.12.07_0-x86_64-1.txz.asc
--rw-r--r-- 1 root root      456 2023-09-16 17:59 ./slackware64/l/at-spi2-core-2.50.0-x86_64-1.txt
--rw-r--r-- 1 root root  1107232 2023-09-16 17:59 ./slackware64/l/at-spi2-core-2.50.0-x86_64-1.txz
--rw-r--r-- 1 root root      163 2023-09-16 17:59 ./slackware64/l/at-spi2-core-2.50.0-x86_64-1.txz.asc
+-rw-r--r-- 1 root root      456 2024-01-07 18:36 ./slackware64/l/at-spi2-core-2.50.1-x86_64-1.txt
+-rw-r--r-- 1 root root  1107092 2024-01-07 18:36 ./slackware64/l/at-spi2-core-2.50.1-x86_64-1.txz
+-rw-r--r-- 1 root root      163 2024-01-07 18:36 ./slackware64/l/at-spi2-core-2.50.1-x86_64-1.txz.asc
 -rw-r--r-- 1 root root      238 2023-02-13 19:42 ./slackware64/l/atkmm-2.28.3-x86_64-1.txt
 -rw-r--r-- 1 root root   116244 2023-02-13 19:42 ./slackware64/l/atkmm-2.28.3-x86_64-1.txz
 -rw-r--r-- 1 root root      163 2023-02-13 19:42 ./slackware64/l/atkmm-2.28.3-x86_64-1.txz.asc
@@ -5658,11 +5658,11 @@ drwxr-xr-x   2 root root      4096 2023-03-08 20:34 ./slackware64/y
 -rw-r--r--   1 root root   1491108 2023-02-19 18:31 ./slackware64/y/nethack-3.6.7-x86_64-1.txz
 -rw-r--r--   1 root root       163 2023-02-19 18:31 ./slackware64/y/nethack-3.6.7-x86_64-1.txz.asc
 -rw-r--r--   1 root root        26 2020-12-30 21:55 ./slackware64/y/tagfile
-drwxr-xr-x  18 root root      4096 2024-01-06 20:46 ./source
--rw-r--r--   1 root root    606810 2024-01-06 20:46 ./source/CHECKSUMS.md5
--rw-r--r--   1 root root       163 2024-01-06 20:46 ./source/CHECKSUMS.md5.asc
--rw-r--r--   1 root root    844687 2024-01-06 20:46 ./source/FILE_LIST
--rw-r--r--   1 root root  25212335 2024-01-06 20:46 ./source/MANIFEST.bz2
+drwxr-xr-x  18 root root      4096 2024-01-07 20:28 ./source
+-rw-r--r--   1 root root    606810 2024-01-07 20:28 ./source/CHECKSUMS.md5
+-rw-r--r--   1 root root       163 2024-01-07 20:28 ./source/CHECKSUMS.md5.asc
+-rw-r--r--   1 root root    844687 2024-01-07 20:27 ./source/FILE_LIST
+-rw-r--r--   1 root root  25230336 2024-01-07 20:27 ./source/MANIFEST.bz2
 -rw-r--r--   1 root root       828 2022-02-02 04:43 ./source/README.TXT
 drwxr-xr-x 124 root root      4096 2023-11-20 18:52 ./source/a
 -rw-r--r--   1 root root       339 2023-09-28 19:06 ./source/a/FTBFSlog
@@ -6639,7 +6639,7 @@ drwxr-xr-x   2 root root      4096 2023-07-08 18:52 ./source/a/sysvinit-scripts/
 -rw-r--r--   1 root root     10465 2023-07-08 18:52 ./source/a/sysvinit-scripts/scripts/rc.6
 -rw-r--r--   1 root root      3303 2021-04-23 18:33 ./source/a/sysvinit-scripts/scripts/rc.K
 -rw-r--r--   1 root root     13364 2023-12-29 20:20 ./source/a/sysvinit-scripts/scripts/rc.M
--rw-r--r--   1 root root     17608 2023-11-03 17:54 ./source/a/sysvinit-scripts/scripts/rc.S
+-rw-r--r--   1 root root     17975 2024-01-07 20:08 ./source/a/sysvinit-scripts/scripts/rc.S
 -rw-r--r--   1 root root      3424 2023-12-19 21:13 ./source/a/sysvinit-scripts/scripts/rc.cpufreq
 -rw-r--r--   1 root root       274 2021-04-23 18:31 ./source/a/sysvinit-scripts/scripts/rc.local
 -rw-r--r--   1 root root       170 2021-04-23 18:31 ./source/a/sysvinit-scripts/scripts/rc.loop
@@ -6647,7 +6647,7 @@ drwxr-xr-x   2 root root      4096 2023-07-08 18:52 ./source/a/sysvinit-scripts/
 -rw-r--r--   1 root root       691 2021-04-23 18:31 ./source/a/sysvinit-scripts/scripts/rc.modules.local
 -rw-r--r--   1 root root      1656 2021-04-23 18:31 ./source/a/sysvinit-scripts/scripts/rc.sysvinit
 -rw-r--r--   1 root root       842 2018-02-27 06:13 ./source/a/sysvinit-scripts/slack-desc
--rwxr-xr-x   1 root root      2470 2023-12-29 20:21 ./source/a/sysvinit-scripts/sysvinit-scripts.SlackBuild
+-rwxr-xr-x   1 root root      2470 2024-01-07 20:11 ./source/a/sysvinit-scripts/sysvinit-scripts.SlackBuild
 -rw-r--r--   1 root root       668 2015-08-06 22:54 ./source/a/sysvinit/doinst.sh.gz
 -rw-r--r--   1 root root      1009 2018-06-21 18:24 ./source/a/sysvinit/slack-desc
 -rw-r--r--   1 root root    233865 2023-08-17 21:57 ./source/a/sysvinit/sysvinit-3.08.tar.lz
@@ -9065,7 +9065,7 @@ drwxr-xr-x   2 root root     16384 2023-12-14 20:35 ./source/kde/kde/slack-desc
 -rw-r--r--   1 root root       972 2021-12-10 05:48 ./source/kde/kde/slack-desc/zanshin
 drwxr-xr-x   7 root root      4096 2022-04-21 20:14 ./source/kde/kde/src
 drwxr-xr-x   2 root root     36864 2023-12-07 19:04 ./source/kde/kde/src/applications
-drwxr-xr-x   2 root root      4096 2023-12-16 20:05 ./source/kde/kde/src/applications-extra
+drwxr-xr-x   2 root root      4096 2024-01-07 18:39 ./source/kde/kde/src/applications-extra
 -rw-r--r--   1 root root    267008 2023-09-04 08:23 ./source/kde/kde/src/applications-extra/alkimia-8.1.2.tar.xz
 -rw-r--r--   1 root root       833 2023-09-04 08:23 ./source/kde/kde/src/applications-extra/alkimia-8.1.2.tar.xz.sig
 -rw-r--r--   1 root root  55207684 2020-05-23 15:58 ./source/kde/kde/src/applications-extra/calligra-3.2.1.tar.xz
@@ -9095,8 +9095,8 @@ drwxr-xr-x   2 root root      4096 2023-12-16 20:05 ./source/kde/kde/src/applica
 -rw-r--r--   1 root root 150232476 2023-12-12 10:21 ./source/kde/kde/src/applications-extra/kstars-3.6.8.tar.xz
 -rw-r--r--   1 root root    422820 2019-12-20 23:39 ./source/kde/kde/src/applications-extra/ktimetracker-5.0.1.tar.xz
 -rw-r--r--   1 root root       833 2019-12-20 23:39 ./source/kde/kde/src/applications-extra/ktimetracker-5.0.1.tar.xz.sig
--rw-r--r--   1 root root   1088636 2023-12-12 15:02 ./source/kde/kde/src/applications-extra/okteta-0.26.14.tar.xz
--rw-r--r--   1 root root       833 2023-12-12 15:02 ./source/kde/kde/src/applications-extra/okteta-0.26.14.tar.xz.sig
+-rw-r--r--   1 root root   1090764 2024-01-01 08:20 ./source/kde/kde/src/applications-extra/okteta-0.26.15.tar.xz
+-rw-r--r--   1 root root       833 2024-01-01 08:20 ./source/kde/kde/src/applications-extra/okteta-0.26.15.tar.xz.sig
 -rw-r--r--   1 root root    198144 2014-10-22 03:23 ./source/kde/kde/src/applications-extra/oxygen-gtk2-1.4.6.tar.xz
 -rw-r--r--   1 root root   1662596 2023-12-05 12:55 ./source/kde/kde/src/applications/akonadi-23.08.4.tar.xz
 -rw-r--r--   1 root root       833 2023-12-05 12:55 ./source/kde/kde/src/applications/akonadi-23.08.4.tar.xz.sig
@@ -10021,8 +10021,8 @@ drwxr-xr-x   2 root root      4096 2023-12-20 04:18 ./source/l/aspell
 -rw-r--r--   1 root root   1539829 2023-12-19 23:29 ./source/l/aspell/aspell-0.60.8.1.tar.lz
 -rwxr-xr-x   1 root root      3788 2023-12-20 04:19 ./source/l/aspell/aspell.SlackBuild
 -rw-r--r--   1 root root       705 2018-02-27 06:12 ./source/l/aspell/slack-desc
-drwxr-xr-x   2 root root      4096 2023-09-16 17:59 ./source/l/at-spi2-core
--rw-r--r--   1 root root    567664 2023-09-15 21:48 ./source/l/at-spi2-core/at-spi2-core-2.50.0.tar.xz
+drwxr-xr-x   2 root root      4096 2024-01-07 18:36 ./source/l/at-spi2-core
+-rw-r--r--   1 root root    567836 2024-01-06 01:15 ./source/l/at-spi2-core/at-spi2-core-2.50.1.tar.xz
 -rwxr-xr-x   1 root root      3475 2021-03-31 19:04 ./source/l/at-spi2-core/at-spi2-core.SlackBuild
 -rw-r--r--   1 root root       948 2018-02-27 06:12 ./source/l/at-spi2-core/slack-desc
 drwxr-xr-x   2 root root      4096 2023-02-13 19:41 ./source/l/atkmm
