@@ -1,3 +1,11 @@
+Sun Jan  7 20:24:51 UTC 2024
+a/sysvinit-scripts-15.1-noarch-11.txz:  Rebuilt.
+  rc.S: Don't attempt to edit /etc/motd unless it exists, it is writable, and
+  the first line starts with "Linux <wrong kernel version>."
+  Thanks to lostintime.
+kde/okteta-0.26.15-x86_64-1.txz:  Upgraded.
+l/at-spi2-core-2.50.1-x86_64-1.txz:  Upgraded.
++--------------------------+
 Sat Jan  6 20:43:01 UTC 2024
 x/fcitx5-anthy-5.1.3-x86_64-1.txz:  Upgraded.
 x/fcitx5-chinese-addons-5.1.3-x86_64-1.txz:  Upgraded.
